--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
 <strong><p>Google<p></strong>
 
- 
 
 <p>Google's advertising requirements can be summed up by Google's Advertising Principles. They are put in place to provide a positive experience for users.<a href="https://support.google.com/adwordspolicy/answer/1316548?hl=en">https://support.google.com/adwordspolicy/answer/1316548?hl=en</a>
 </p>
@@ -83,6 +82,12 @@
 <p>We, along with third-party vendors such as Google use first-party cookies (such as the Google Analytics cookies) and third-party cookies (such as the DoubleClick cookie) or other third-party identifiers together to compile data regarding user interactions with ad impressions and other ad service functions as they relate to our app.
 </p>
 <br />
+
+<strong><p>Location<p></strong>
+
+
+<p>Some times we use device coarse or fine location for ads purposes. It help us to to show you the best and relevant ads for your best experience. We do not use location information for any other purpose.
+</p>
 
 <br />
 <strong><p>Legal
