--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
+!DOCTYPE html>
+<html lang="en-us">
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Privacy Policy</title>
+ </head>
+<body>
+
+
 <h1>Privacy Policy</h1>
-
-
 
 <p>This privacy policy has been compiled to better serve those who are concerned with how their 'Personally Identifiable Information' (PII) is being used online. PII, as described in US privacy law and information security, is information that can be used on its own or with other information to identify, contact, or locate a single person, or to identify an individual in context. Please read our privacy policy carefully to get a clear understanding of how we collect, use, protect or otherwise handle your Personally Identifiable Information in accordance with our apps.</p>
 
@@ -138,4 +145,5 @@ hellohyder@hotmail.com</p>
 
 <p>Last Edited on 2017-03-08</p>
 
- 
+ </body>
+</html>
