--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Privacy Policy</title>
+ 
+<style>
+    body{
+        font-family: sans-serif;
+    }
+    </style>
+ 
+ 
  </head>
 <body>
 
