--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
  
 <br />
-<strong><p>What personal information do we collect from the people that visit our blog, website or app?
+<strong><p>What personal information do we collect from the people who visit our blog, website, or app?
 </p></strong>
  
 
@@ -58,11 +58,11 @@
 <p>We do not use cookies for tracking purposes
 </p>
 
-<p>You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since browser is a little different, look at your browser's Help Menu to learn the correct way to modify your cookies.
+<p>You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since the browser is a little different, look at your browser's Help Menu to learn the correct way to modify your cookies.
 </p>
  
 
-<p>If you turn cookies off, Some of the features that make your site experience more efficient may not function properly.that make your site experience more efficient and may not function properly.
+<p>If you turn cookies off, Some of the features that make your site experience more efficient may not function properly. that make your site experience more efficient and may not function properly.
 </p>
 
 <br />
@@ -83,7 +83,7 @@
 <p>We use Google AdSense Advertising on our app.
 </p>
 
-<p>Google, as a third-party vendor, uses cookies to serve ads on our site. Google's use of the DART cookie enables it to serve ads to our users based on previous visits to our site and other sites on the Internet. Users may opt-out of the use of the DART cookie by visiting the Google Ad and Content Network privacy policy.
+<p>Google, as a third-party vendor, uses cookies to serve ads on our site. Google's use of the DART cookie enables it to serve ads to our users based on previous visits to our site and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the Google Ad and Content Network privacy policy.
 </p>
 
 <p>We have implemented the following:
@@ -101,27 +101,27 @@
 <strong><p>Location<p></strong>
 
 
-<p>Some times we use device coarse or fine location for ads purposes. It help us to to show you the best and relevant ads for your best experience. We do not use location information for any other purpose.
+<p> Sometimes we use the device's coarse or fine location for ads purposes. It helps us to show you the best and most relevant ads for your best experience. We do not use location information for any other purpose.
 </p>
 
 <br />
 <strong><p>Legal
 </p></strong>
  
-<p>You can not to use our apps in any way that might be illegal or unlawful under local and international laws. You must remove our apps from your device if you have any doubts.
+<p>You can not use our apps in any way that might be illegal or unlawful under local and international laws. You must remove our apps from your device if you have any doubts.
 </p>
 
 <strong><p>Opting out:
 </p></strong>
-<p>Users can set preferences for how Google advertises to you using the Google Ad Settings page. Alternatively, you can opt out by visiting the Network Advertising Initiative Opt Out page or by using the Google Analytics Opt Out Browser add on.
+<p>Users can set preferences for how Google advertises to you using the Google Ad Settings page. Alternatively, you can opt out by visiting the Network Advertising Initiative Opt Out page or by using the Google Analytics Opt Out Browser add-on.
 </p>
  
 <br />
-<strong><p>Users can use app anonymously.
+<strong><p>Users can use the app anonymously.
 </p></strong>
 <p>Once this privacy policy is created, we will add a link to it on our home page or as a minimum, on the first significant page after entering our app.
 </p>
-<p>Our Privacy Policy link includes the word 'Privacy' and can easily be found on the page specified above.
+<p>Our Privacy Policy link includes the word 'Privacy' and can be found on the abovementioned page.
 
 </p><br />
 <p>You will be notified of any Privacy Policy changes:
@@ -151,7 +151,7 @@
 hellohyder@hotmail.com</p>
 
 
-<p>Last Edited on 2017-03-08</p>
+<p>Last Edited on 2023-09-17</p>
 
  </body>
 </html>
